Fix CV caching issue

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="visual-circle circle-2"></div>
                 </div>
                 <div class="hero-social-cards">
-                    <a href="CV.pdf" target="_blank" class="social-card cv-text" aria-label="Resume/CV">
+                    <a href="CV.pdf?v=2" target="_blank" class="social-card cv-text" aria-label="Resume/CV">
                         CV
                     </a>
                     <a href="https://linkedin.com/in/ziad-tarek2/" target="_blank" class="social-card"
